Source/Blazorise.Bootstrap5/Styles/components/_bar.scss
/* ... */
.navbar[data-mode="vertical-small"],
.navbar[data-mode="vertical-inline"][data-collapse=small],
.navbar[data-mode="vertical-popout"][data-collapse=small] {
    width: var(--b-vertical-bar-small-width, 64px);
    min-width: var(--b-vertical-bar-small-width, 64px);

    &:not(.navbar-initial) {
        transition: width 200ms ease-in-out, min-width 200ms ease-in-out;
    }

    > .navbar-toggler:not(.position-fixed) {
        position: relative;
        width: 100%;
    }

    > .navbar-toggler.position-fixed {
        left: var(--b-vertical-bar-small-width, 64px);
    }

    .navbar-collapse {
        padding: 0;
        scrollbar-width: none;
        -ms-overflow-style: none;

        &::-webkit-scrollbar {
            width: 0;
            height: 0;
        }
    }

    .navbar-nav {
        padding: 0;
    }

    .navbar-brand {
        justify-content: center;
        width: 100%;
        padding: 0;

        .nav-item {
            width: 100%;
            height: var(--b-vertical-bar-small-width, 64px);
        }

        .nav-link {
            justify-content: center;
            width: 100%;
            height: var(--b-vertical-bar-small-width, 64px);
            gap: 0 !important;
            font-size: 0;

            .pe-none {
                display: inline-flex;
                align-items: center;
                justify-content: center;
                width: 100%;
            }
        }
    }

    .dropdown[data-visible] > .dropdown-menu-container {
        @include navbar-vertical-popout-menu-container;
        left: var(--b-vertical-bar-small-width, 64px);

        &.dropdown-menu-end {
            right: var(--b-vertical-bar-small-width, 64px);
            left: unset;
        }

        > .dropdown-menu {
            @include navbar-vertical-popout-menu;
            position: relative !important;

            > .dropdown {
                .dropdown-menu-container {
                    left: var(--b-vertical-bar-popout-menu-width, 180px);

                    &.dropdown-menu-end {
                        right: var(--b-vertical-bar-popout-menu-width, 180px);
                    }
                }
            }
        }
    }

    .navbar-collapse > .navbar-nav.mt-auto > .nav-item > .dropdown[data-visible] > .dropdown-menu-container {
        position: fixed !important;
        top: auto !important;
        bottom: 0 !important;
        margin: 0 5px;
    }

    .navbar-collapse > .navbar-nav.mt-auto > .nav-item:nth-last-child(2) > .dropdown[data-visible] > .dropdown-menu-container {
        bottom: var(--b-vertical-bar-small-width, 64px) !important;
    }

    .navbar-collapse > .navbar-nav.mt-auto > .nav-item:nth-last-child(3) > .dropdown[data-visible] > .dropdown-menu-container {
        bottom: calc(var(--b-vertical-bar-small-width, 64px) * 2) !important;
    }

    .navbar-collapse > .navbar-nav.mt-auto > .nav-item:nth-last-child(4) > .dropdown[data-visible] > .dropdown-menu-container {
        bottom: calc(var(--b-vertical-bar-small-width, 64px) * 3) !important;
    }

    .navbar-collapse > .navbar-nav > .nav-item {
        margin: 0;
        min-height: var(--b-vertical-bar-small-width, 64px);
        width: 100%;

        > .nav-link,
        > .dropdown > .nav-link {
            align-items: center;
            justify-content: center;
            width: 100%;
            height: var(--b-vertical-bar-small-width, 64px);
            text-align: center;
            padding-left: 0px;
            padding-right: 0px;
            font-size: 0;
            border-radius: 0;
            border-bottom: 1px solid var(--b-bar-border-color, var(--bs-border-color, rgba(0, 0, 0, .175)));
            transition: font-size 100ms ease-out;

            &:after {
                display: none;
            }

            .pe-none {
                width: 1.25rem;
                margin-right: 0 !important;
                font-size: 1.25rem;
            }
        }

        > .dropdown > .nav-link {
            .d-flex {
                width: auto !important;
                gap: 0 !important;
                justify-content: center !important;
            }

            .flex-grow-1 {
                flex: 0 0 auto !important;
            }

            .text-truncate {
                overflow: visible !important;
            }

            .flex-grow-1.text-truncate {
                max-width: 1.25rem;
            }

            .ms-auto {
                display: none;
            }
        }
    }

    .navbar-collapse > .navbar-nav > .navbar-text {
        text-align: center;
    }
}

.navbar[data-mode="vertical-inline"]:not([data-collapse]) {
    overflow-y: auto;
    overflow-x: hidden;

    .dropdown[data-visible] > .dropdown-menu-container {
        position: relative;

        > .dropdown-menu {
            position: relative !important;
            background: transparent;
            border: none;
            border-radius: 0;
            box-shadow: none;
            padding: .25rem 0;

            .dropdown-item {
                padding: .375rem .75rem .375rem 3rem;
                margin-top: .125rem;
            }
        }
    }

    .navbar-brand .nav-link {
        display: flex;
        align-items: center;
    }

    .navbar-nav > .nav-item > .dropdown > .nav-link {
        padding-left: .75rem !important;
    }
}
/* ... */

